<resources>
    <string name="app_name">BaseFrame</string>
    <string name="wenshizaipei">温室栽培</string>
    <string name="wendu">温度：</string>
    <string name="switchF">切换</string>
    <string name="shidu">湿度：</string>
    <string name="shiduTip">适湿约0.3~0.7</string>
    <string name="wenduTip">适温约19-25°C</string>
    <string name="shiduValue">0.2</string>
    <!-- .4表示数据总共是4位数，包含小数点在内-->
    <string name="wenduValue">22.0°C</string>
    <string name="smartdoctor">智慧医生</string>
    <string name="check_people">检测人体...</string>
    <string name="tv_smartdoctor_one_tip">找不到你啦!\n快离我近点!</string>
    <string name="tv_smartdoctor_two_tip">检测体温,请将体温放在\n体温传感器上,保持三秒</string>
    <string name="high_shao_range">&gt;39</string>
    <string name="low_shao_tip">低烧</string>
    <string name="high_shao_tip">高烧</string>
    <string name="low_wen_tip">低温</string>
    <string name="low_wen_range">&lt;36.1</string>
    <string name="low_shao_range">37.3/38</string>
    <string name="current_tiwen">当前体温</string>
    <string name="current_tiwen_value">36.3°C</string>
    <string name="normal_tiwen_value">正常体温36.1/37.3</string>
    <string name="smarttree">温室栽培介绍</string>
    <string name="wenshizaipeikechent">温室栽培课程</string>
    <string name="sensorjieshao">感知智能介绍</string>
    <string name="sensor_wendu_tip">温度传感器是指将温度值和湿度值转换为容易被测量处理的电信号的设备或装置</string>
    <string name="sensor_touchu_tip">触摸传感器是指将能感受压力信号，并能按照一定的规律将压力信号转换成可用的输出的电信号的器件或装置</string>
    <string name="sensor_bright_tip">光照传感器，用于检测光照强度，简称光照，工作原理是将光照强度转为电压值</string>

    <string name="project_task_title">项目任务</string>
    <string name="project_fun_desc_title">功能描述</string>
    <string name="project_study_point_title">对应知识点</string>
    <string name="project_task">学生利用教学软件，温湿度传感器,学生利用教学软件，温湿度传感器学生利用教学软件，温湿度传感器</string>
    <string name="project_fun_desc">学生利用教学软件，温湿度传感器学生利用教学软件，温湿度传感器学生利用教学软件，温湿度传感器</string>
    <string name="project_study_point">学生利用教学软件，温湿度传感器学生利用教学软件，温湿度传感器学生利用教学软件，温湿度传感器</string>
    <string name="project_task_smarthome">学生利用教学软件，温湿度传感器,学生利用教学软件，温湿度传感器学生利用教学软件，温湿度传感器</string>
    <string name="project_fun_desc_smarthome">学生利用教学软件，温湿度传感器学生利用教学软件，温湿度传感器学生利用教学软件，温湿度传感器</string>
    <string name="project_study_point_smarthome">学生利用教学软件，温湿度传感器学生利用教学软件，温湿度传感器学生利用教学软件，温湿度传感器</string>
    <string name="smarthome">智能家具</string>
    <string name="smarthomeIntroduce">智能家居介绍</string>
    <string name="smarthomeKecheng">智能家居课程</string>
    <string name="sensorModule">感知智能模块</string>
    <string name="dengguangTip">参数约：300-360lux</string>
    <string name="dengguang">灯光:</string>
    <string name="dengguangValue">360lux</string>
    <string name="shiduHomeTip">参数约:0.4-0.7</string>
    <string name="wenduHomeTip">参数值:19-25°C</string>
    <string name="gangyingTip">参数 0-1m</string>
    <string name="gangying">感应:</string>
    <string name="ganyingValue">0.5</string>
    <string name="pref_dream_text_key">pref_dream_text</string>
    <string name="pref_dream_text_default">zzzZZZzzz</string>
    <string name="input_somthing">输入要搜索的产品</string>
    <string name="type">分类</string>
    <string name="danceTitle">机器人舞蹈</string>
    <string name="channel">频道</string>
    <string name="act">活动专区</string>
    <string name="seckill">秒杀</string>
    <string name="hot">热卖</string>
    <string name="recommend">推荐</string>
    <string name="goodsInfo">商品详情</string>
    <string name="lianxikefu">联系客服</string>
    <string name="shoucang">收藏</string>
    <string name="gouwuche">购物车</string>
    <string name="add_gouwuche">加入购物车</string>
    <string name="home">首页</string>
    <string name="share">分享</string>
    <string name="goods_car">购物车</string>
    <string name="edit">编辑</string>
    <string name="allSelect">全选</string>
    <string name="gotoCalculate">去结算</string>
    <string name="delete">删除</string>
    <string name="nullSomathing">空空如也</string>
    <string name="allPrice">合计：</string>
    <string name="finish">完成</string>
    <string name="finish1">完成1</string>
    <string name="finish2">完成2</string>
    <string name="finish3">完成3</string>
    <string name="finish4">完成4</string>
    <string name="finish5">完成5</string>
    <string name="finish6">完成6</string>
    <string name="finish7">完成7</string>
    <string name="title_activity_draw_layout">DrawLayoutActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
