<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.uurobot.baseframe.view.AnimImageView
        android:id="@+id/imageview_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/open0"
        app:type="openDoor" />

    <LinearLayout
        android:id="@+id/ll_layout_wenshidu"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bk_smarthome"
        android:orientation="vertical">

        <com.uurobot.baseframe.view.ImageTextView
            android:id="@+id/imagetextview_dengguang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bitmapResId="@drawable/denguang_home"
            app:textDown="@string/dengguangTip"
            app:textDynamicColor="@color/white"
            app:textDynamicSize="28dp"
            app:textNormalColor="@color/white_High"
            app:textNormalSize="15dp"
            app:textUpLeft="@string/dengguang"
            app:textUpRight="@string/dengguangValue" />

        <View style="@style/view_smarthome" />

        <com.uurobot.baseframe.view.ImageTextView
            android:id="@+id/imagetextview_shidu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bitmapResId="@drawable/shidu_home"
            app:textDown="@string/shiduHomeTip"
            app:textDynamicColor="@color/white"
            app:textDynamicSize="28dp"
            app:textNormalColor="@color/white_High"
            app:textNormalSize="15dp"
            app:textUpLeft="@string/shidu"
            app:textUpRight="@string/shiduValue" />

        <View style="@style/view_smarthome" />

        <com.uurobot.baseframe.view.ImageTextView
            android:id="@+id/imagetextview_wendu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bitmapResId="@drawable/wendu_home"
            app:textDown="@string/wenduHomeTip"
            app:textDynamicColor="@color/white"
            app:textDynamicSize="28dp"
            app:textNormalColor="@color/white_High"
            app:textNormalSize="15dp"
            app:textUpLeft="@string/wendu"
            app:textUpRight="@string/wenduValue" />

        <View style="@style/view_smarthome" />

        <com.uurobot.baseframe.view.ImageTextView
            android:id="@+id/imagetextview_gangying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bitmapResId="@drawable/dangying_home"
            app:textDown="@string/gangyingTip"
            app:textDynamicColor="@color/white"
            app:textDynamicSize="28dp"
            app:textNormalColor="@color/white_High"
            app:textNormalSize="15dp"
            app:textUpLeft="@string/gangying"
            app:textUpRight="@string/ganyingValue" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_switch"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="切换动画" />

        <Button
            android:id="@+id/btn_setDengguang"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="设置灯光" />

        <Button
            android:id="@+id/btn_setShidu"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="设置湿度" />

        <Button
            android:id="@+id/btn_setWendu"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="设置温度" />

        <Button
            android:id="@+id/btn_setGanying"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="设置感应" />
    </LinearLayout>

    <com.uurobot.baseframe.view.HeadLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:btn_left_bk="@drawable/btn_back"
        app:btn_right_bk="@drawable/btn_help" />
</RelativeLayout>