<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:text="@string/current_tiwen"
        android:textColor="#C8F6FF"
        android:textSize="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_tiwen_value"
        android:text="@string/current_tiwen_value"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/normal_tiwen_value"
        android:textColor="#C8F6FF"
        android:textSize="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>