<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.uurobot.baseframe.view.AnimImageView
        android:id="@+id/imageview_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dry0"
        app:type="dry" />

    <TextView
        android:id="@+id/tv_wenshizaipei"
        android:layout_width="194dp"
        android:layout_height="70dp"
        android:layout_above="@id/ll_layout_wenshidu"
        android:layout_alignLeft="@id/ll_layout_wenshidu"
        android:background="@drawable/bk_wenshizaipei"
        android:drawableLeft="@drawable/tree"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/wenshizaipei"
        android:textColor="#00cafd"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/ll_layout_wenshidu"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bk_wenshizaipei"
        android:orientation="vertical">

        <com.uurobot.baseframe.view.ImageTextView
            android:id="@+id/imagetextview_shidu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bitmapResId="@drawable/shidu"
            app:lineColor="@color/black_high"
            app:lineSize="4dp"
            app:textDown="@string/shiduTip"
            app:textDynamicColor="@color/green_high"
            app:textDynamicSize="24dp"
            app:textNormalColor="@color/green_low"
            app:textNormalSize="15dp"
            app:textUpLeft="@string/shidu"
            app:textUpRight="@string/shiduValue" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <com.uurobot.baseframe.view.ImageTextView
            android:id="@+id/imagetextview_wendu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bitmapResId="@drawable/wendu"
            app:lineColor="@android:color/transparent"
            app:lineSize="4dp"
            app:textDown="@string/wenduTip"
            app:textDynamicColor="@color/green_high"
            app:textDynamicSize="24dp"
            app:textNormalColor="@color/green_low"
            app:textNormalSize="15dp"
            app:textUpLeft="@string/wendu"
            app:textUpRight="@string/wenduValue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_surfaceviewDialog"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="结束动画" />

        <Button
            android:id="@+id/btn_switch"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="切换动画" />

        <Button
            android:id="@+id/btn_setWendu"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="设置温度" />

        <Button
            android:id="@+id/btn_setShidu"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="设置湿度" />
    </LinearLayout>

    <com.uurobot.baseframe.view.HeadLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:btn_left_bk="@drawable/btn_back_visual"
        app:btn_right_bk="@drawable/btn_help_visual" />
</RelativeLayout>