<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_surfaceviewDialog"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="结束动画" />

        <Button
            android:id="@+id/btn_switch"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="切换动画" />

        <Button
            android:id="@+id/btn_setWendu"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="设置温度" />

        <Button
            android:id="@+id/btn_setShidu"
            style="@style/style_tv_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="设置湿度" />
    </LinearLayout>


    <com.uurobot.baseframe.view.SurfaceViewAnim
        android:id="@+id/surfaceView_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_head" />

    <TextView
        android:id="@+id/tv_wenshizaipei"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/bk_wenshizaipei"
        android:drawableLeft="@drawable/tree"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/wenshizaipei"
        android:textColor="#00cafd"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_wenshizaipei"
        android:layout_below="@id/tv_wenshizaipei"
        android:layout_marginTop="10dp"
        android:background="@drawable/bk_wenshizaipei"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp">

            <ImageView
                android:id="@+id/img_shidu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/shidu" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_shidu">

                <TextView
                    android:id="@+id/tv_shidu1"
                    style="@style/tv_wenshidu"
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shidu" />

                <TextView
                    android:id="@+id/tv_shidu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_shidu1"
                    android:text="@string/shiduValue"
                    android:textColor="#00acfc"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/tv_shidu2"
                    style="@style/tv_wenshidu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/tv_shidu1"
                    android:layout_below="@id/tv_shidu"
                    android:text="@string/shiduTip" />
            </RelativeLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="#f5F1FD"
            android:padding="2dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp">

            <ImageView
                android:id="@+id/img_wendu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/wendu" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_wendu">

                <TextView
                    android:id="@+id/tv_wendu1"
                    style="@style/tv_wenshidu"
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wendu" />

                <TextView
                    android:id="@+id/tv_wendu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_wendu1"
                    android:text="@string/wenduValue"
                    android:textColor="#00acfc"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/tv_wendu2"
                    style="@style/tv_wenshidu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tv_wendu1"
                    android:layout_below="@id/tv_wendu"
                    android:text="@string/wenduTip" />
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>