<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x50"
        android:gravity="center">

        <ImageButton
            android:id="@+id/image_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/x10"
            android:background="@drawable/top_bar_left_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/goodsInfo"
            android:textColor="@android:color/black"
            android:textSize="@dimen/x20" />

        <ImageButton
            android:id="@+id/img_btn_goodinfo_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/x10"
            android:background="@drawable/icon_more" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x5"
        android:background="@color/red" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.uurobot.baseframe.view.ScrollViewContainer
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/c" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/a" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/b" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/d" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/e" />
                    </LinearLayout>
                </ScrollView>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <WebView
                        android:id="@+id/webview_goodinfo_activity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </ScrollView>
            </com.uurobot.baseframe.view.ScrollViewContainer>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_callserver_unpressed"
                android:gravity="center"
                android:text="@string/lianxikefu" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/good_uncollected"
                android:gravity="center"
                android:text="@string/shoucang" />

            <TextView
                android:id="@+id/tv_car"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_good_detail_cart"
                android:gravity="center"
                android:text="@string/gouwuche" />

            <Button
                android:id="@+id/btn_add_goods_car"
                android:layout_width="0dp"
                android:layout_height="@dimen/x50"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@drawable/add_cart_bg_selector"
                android:text="@string/add_gouwuche" />

        </LinearLayout>

        <include layout="@layout/goods_info_head_more" />

    </FrameLayout>

</LinearLayout>